--- a/public/style.css
+++ b/public/style.css
@@ -140,6 +140,15 @@ header p {
 .icon {
   font-size: 3rem;
   margin-bottom: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.icon svg {
+  width: 3rem;
+  height: 3rem;
+  color: var(--text-muted);
 }
 
 .browse-btn {
